--- a/Shazam_song_downloader.ipynb
+++ b/Shazam_song_downloader.ipynb
@@ -66,7 +66,7 @@
         "import torchaudio\n",
         "import moviepy.editor as mp"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -195,7 +195,7 @@
         "  return x, sr\n",
         "audio, sr = get_audio()"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -302,7 +302,7 @@
         "except ValueError:\n",
         "  print(\"Oopss..Can't find song, Please Try Again\")"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -321,7 +321,7 @@
         "video_uri = data['actions'][0]['uri']\n",
         "print(\"Video URI: \" ,video_uri)"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,7 +339,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0c006e74-87c7-4c41-cd7d-c08ac3494318"
+        "outputId": "599def36-d79e-493b-ad6a-ad497908a6f8"
       },
       "source": [
         "yt = YouTube(video_uri)\n",
@@ -373,7 +373,7 @@
         "  if resolution[i] != False: \n",
         "    print(i)"
       ],
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,7 +391,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QCDs48APXsCp"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QCDs48APXsCp",
+        "outputId": "348f1446-11b5-41cf-c45f-427c9dee2c7e"
       },
       "source": [
         "x = True\n",
@@ -436,8 +440,18 @@
         "  if x == True:    \n",
         "    print(\"Oopss.. Please enter a valid resolution\") "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a valid Resolution value: 144\n",
+            "To download as Video click --> v , To download as a mp3 click --> 3  :v\n",
+            "Video downloaded sucessfully\n"
+          ]
+        }
+      ]
     }
   ]
 }
