--- a/Shazam_song_downloader.ipynb
+++ b/Shazam_song_downloader.ipynb
@@ -6,7 +6,7 @@
       "name": "Shazam_song_downloader.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOi9W2GSeLq23A1Rl0YvO0s",
+      "authorship_tag": "ABX9TyOIDayY0gLxS5st4wY9A9sh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,8 @@
         "!pip install youtube-search-python\n",
         "!pip3 install ShazamAPI\n",
         "!pip install ffmpeg-python > /dev/null\n",
-        "!pip install torchaudio"
+        "!pip install torchaudio\n",
+        "!pip install moviepy"
       ],
       "execution_count": null,
       "outputs": []
@@ -66,7 +67,7 @@
         "import torchaudio\n",
         "import moviepy.editor as mp"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -195,7 +196,7 @@
         "  return x, sr\n",
         "audio, sr = get_audio()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -302,7 +303,7 @@
         "except ValueError:\n",
         "  print(\"Oopss..Can't find song, Please Try Again\")"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -321,7 +322,7 @@
         "video_uri = data['actions'][0]['uri']\n",
         "print(\"Video URI: \" ,video_uri)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,7 +340,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "599def36-d79e-493b-ad6a-ad497908a6f8"
+        "outputId": "0c006e74-87c7-4c41-cd7d-c08ac3494318"
       },
       "source": [
         "yt = YouTube(video_uri)\n",
@@ -373,7 +374,7 @@
         "  if resolution[i] != False: \n",
         "    print(i)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,11 +392,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QCDs48APXsCp",
-        "outputId": "348f1446-11b5-41cf-c45f-427c9dee2c7e"
+        "id": "QCDs48APXsCp"
       },
       "source": [
         "x = True\n",
@@ -440,18 +437,8 @@
         "  if x == True:    \n",
         "    print(\"Oopss.. Please enter a valid resolution\") "
       ],
-      "execution_count": 59,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter a valid Resolution value: 144\n",
-            "To download as Video click --> v , To download as a mp3 click --> 3  :v\n",
-            "Video downloaded sucessfully\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
